--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  pull_request:
 
 jobs:
   build:
@@ -11,24 +12,21 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Giải nén file mã nguồn
-        run: unzip -o "*.zip" -d source
-
-      - name: Cài đặt Java & Gradle
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build APK
+      - name: Build Debug APK
         run: |
-          cd source
-          ./gradlew assembleDebug || echo "Không tìm thấy Gradle, vui lòng kiểm tra mã nguồn."
+          cd app
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-        name: Khaly-App
-        path: source/app/build/outputs/apk/debug/*.apk
+          name: Khaly-App
+          path: app/build/outputs/apk/debug/*.apk
